@@ -15,6 +15,8 @@ Bug Fixes
 * Explicitly check method signatures for varargs instead of heuristically
   guessing (wmeissner)
 * Disallow declaring Pointer-derived fields in Structures (Function, Memory)
+* Ensure Object.toString/hashCode/equals methods are intercepted on proxyied
+  interfaces
 
 Release 2.5
 Features
